tree-less proving
